# supertonic-server

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.cuda  README.md  pyproject.toml
examples/: curl_streaming.sh  openai_client.py  pipecat_smoke.py  ws_smoke.py
src/supertonic_server/: __init__.py  __main__.py  app.py  audio.py  cli.py  config.py  engine.py  observability.py  server.py  voices.py
src/supertonic_server/ui/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
src/supertonic_server/ui/src/: App.tsx  api.ts  styles.css  types.ts
src/supertonic_server/ui/src/components/: CodeSnippet.tsx  Editor.tsx  NavTabs.tsx  Observatory.tsx  ParamRow.tsx  Player.tsx  TopBar.tsx  Waveform.tsx
src/supertonic_server/ui/src/lib/: langs.ts  snippets.ts
